Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -1786,33 +1786,6 @@
     ]
   },
   {
-    "title": "Tắc ruột sau phẫu thuật sa trực tràng",
-    "content": "Bài viết đề cập đến trường hợp bệnh nhân 18 tuổi bị tắc ruột sau khi phẫu thuật sa trực tràng. Sau một tuần phẫu thuật, bệnh nhân xuất hiện triệu chứng chướng bụng, xuất huyết tiêu hóa và không thể đi đại tiện. Các bác sĩ đã phát hiện tắc ruột do nhiễm trùng vết mổ và thực hiện các biện pháp can thiệp như nội soi trực tràng và đặt ống thông để cầm máu. Sau điều trị, sức khỏe bệnh nhân đã hồi phục và xuất viện bình thường.",
-    "link": "https://vnexpress.net/tac-ruot-sau-phau-thuat-sa-truc-trang-4865977.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao bệnh nhân Hoàng bị tắc ruột sau phẫu thuật sa trực tràng?",
-    "answers": [
-      {
-        "text": "Do nhiễm trùng vết mổ",
-        "correct": true
-      },
-      {
-        "text": "Do chế độ ăn uống không hợp lý",
-        "correct": false
-      },
-      {
-        "text": "Do không tập luyện thể dục",
-        "correct": false
-      },
-      {
-        "text": "Do di truyền từ gia đình",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dương Hoàng Yến bức xúc vì bị đồn qua đời sau khi liệt dây thần kinh số 7",
     "content": "Dương Hoàng Yến đã lên tiếng phản đối thông tin sai lệch trên mạng xã hội về việc cô qua đời sau khi bị liệt dây thần kinh số 7. Một fanpage có hơn 300.000 lượt theo dõi đã đăng tải hình ảnh cùng dòng chia sẻ gây sốc, khiến cô cảm thấy bức xúc. Dương Hoàng Yến khẳng định rằng cô vẫn khỏe mạnh và chỉ bị liệt dây thần kinh tạm thời. Cô cũng nhấn mạnh tầm quan trọng của việc chăm sóc sức khỏe và cảnh báo về căn bệnh này.",
     "link": "https://dantri.com.vn/giai-tri/duong-hoang-yen-buc-xuc-vi-bi-don-qua-doi-sau-khi-liet-day-than-kinh-so-7-20250326115721173.htm",
@@ -1835,6 +1808,33 @@
       },
       {
         "text": "Cô đã viết một bài hát về điều đó.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tắc ruột sau phẫu thuật sa trực tràng",
+    "content": "Bài viết đề cập đến trường hợp bệnh nhân 18 tuổi bị tắc ruột sau khi phẫu thuật sa trực tràng. Sau một tuần phẫu thuật, bệnh nhân xuất hiện triệu chứng chướng bụng, xuất huyết tiêu hóa và không thể đi đại tiện. Các bác sĩ đã phát hiện tắc ruột do nhiễm trùng vết mổ và thực hiện các biện pháp can thiệp như nội soi trực tràng và đặt ống thông để cầm máu. Sau điều trị, sức khỏe bệnh nhân đã hồi phục và xuất viện bình thường.",
+    "link": "https://vnexpress.net/tac-ruot-sau-phau-thuat-sa-truc-trang-4865977.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao bệnh nhân Hoàng bị tắc ruột sau phẫu thuật sa trực tràng?",
+    "answers": [
+      {
+        "text": "Do nhiễm trùng vết mổ",
+        "correct": true
+      },
+      {
+        "text": "Do chế độ ăn uống không hợp lý",
+        "correct": false
+      },
+      {
+        "text": "Do không tập luyện thể dục",
+        "correct": false
+      },
+      {
+        "text": "Do di truyền từ gia đình",
         "correct": false
       }
     ]
@@ -2926,33 +2926,6 @@
     ]
   },
   {
-    "title": "Ho ra đờm màu vàng có phải dấu hiệu bệnh?",
-    "content": "Ho ra đờm màu vàng có thể là dấu hiệu của các bệnh hô hấp như viêm phế quản, viêm phổi hoặc hen suyễn. Màu vàng của đờm chủ yếu do sự hiện diện của bạch cầu trung tính đã chết, cho thấy cơ thể đang phản ứng với nhiễm trùng. Nếu tình trạng này kéo dài hơn một tuần hoặc kèm theo các triệu chứng như sốt, khó thở, người bệnh nên đi khám bác sĩ để được chẩn đoán và điều trị kịp thời.",
-    "link": "https://vnexpress.net/ho-ra-dom-mau-vang-co-phai-dau-hieu-benh-4865965.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Ho ra đờm màu vàng có phải là dấu hiệu của bệnh hô hấp không?",
-    "answers": [
-      {
-        "text": "Có, ho ra đờm màu vàng có thể là dấu hiệu của bệnh hô hấp.",
-        "correct": true
-      },
-      {
-        "text": "Không, đây chỉ là triệu chứng bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng không cần phải lo lắng.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ nếu kèm theo sốt và đau ngực.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
     "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
     "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
@@ -3006,6 +2979,33 @@
       },
       {
         "text": "80 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ho ra đờm màu vàng có phải dấu hiệu bệnh?",
+    "content": "Ho ra đờm màu vàng có thể là dấu hiệu của các bệnh hô hấp như viêm phế quản, viêm phổi hoặc hen suyễn. Màu vàng của đờm chủ yếu do sự hiện diện của bạch cầu trung tính đã chết, cho thấy cơ thể đang phản ứng với nhiễm trùng. Nếu tình trạng này kéo dài hơn một tuần hoặc kèm theo các triệu chứng như sốt, khó thở, người bệnh nên đi khám bác sĩ để được chẩn đoán và điều trị kịp thời.",
+    "link": "https://vnexpress.net/ho-ra-dom-mau-vang-co-phai-dau-hieu-benh-4865965.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Ho ra đờm màu vàng có phải là dấu hiệu của bệnh hô hấp không?",
+    "answers": [
+      {
+        "text": "Có, ho ra đờm màu vàng có thể là dấu hiệu của bệnh hô hấp.",
+        "correct": true
+      },
+      {
+        "text": "Không, đây chỉ là triệu chứng bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng không cần phải lo lắng.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ nếu kèm theo sốt và đau ngực.",
         "correct": false
       }
     ]
@@ -3095,6 +3095,37 @@
       },
       {
         "text": "Chúng bị mất tín hiệu liên lạc.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đề xuất giao đầu mối hướng dẫn Vingroup thủ tục lập đề xuất dự án đường sắt đi Cần Giờ 4 tỉ USD",
+    "content": "Sở Giao thông công chánh TP.HCM vừa đề xuất giao đầu mối hướng dẫn Tập đoàn Vingroup thủ tục lập đề xuất dự án xây dựng tuyến đường sắt đô thị tốc độ cao kết nối trung tâm thành phố với huyện Cần Giờ. Dự án này có tổng vốn đầu tư khoảng 4 tỉ USD, dự kiến hoàn thành vào năm 2028 và được thực hiện theo hình thức đối tác công tư (PPP). Tuyến đường dài khoảng 48km, thiết kế tốc độ 250km/h, nhằm phát triển hạ tầng và du lịch tại khu vực Cần Giờ.",
+    "link": "https://tuoitre.vn/de-xuat-giao-dau-moi-huong-dan-vingroup-thu-tuc-lap-de-xuat-du-an-duong-sat-di-can-gio-4-ti-usd-20250326081420544.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Dự án đường sắt đi Cần Giờ của Vingroup có tổng vốn đầu tư bao nhiêu?",
+    "answers": [
+      {
+        "text": "4 tỉ USD",
+        "correct": true
+      },
+      {
+        "text": "2 tỉ USD",
+        "correct": false
+      },
+      {
+        "text": "6 tỉ USD",
+        "correct": false
+      },
+      {
+        "text": "3 tỉ USD",
+        "correct": false
+      },
+      {
+        "text": "5 tỉ USD",
         "correct": false
       }
     ]
@@ -4677,28 +4708,28 @@
     ]
   },
   {
-    "title": "Những điều người EQ cao không làm",
-    "content": "Theo tiến sĩ Travis Bradberry, người có trí tuệ cảm xúc cao (EQ) không bao giờ làm những điều như để người khác giới hạn niềm vui của mình, quên bài học từ quá khứ, hay chìm đắm trong vấn đề. Họ cũng không sống trong sự hoàn hảo, không giữ mối hận thù, và biết cách nói 'không' khi cần thiết. Những người này hiểu rằng để duy trì cảm xúc tích cực, họ phải tránh những người tiêu cực và tập trung vào giải pháp thay vì vấn đề.",
-    "link": "https://vnexpress.net/nhung-dieu-nguoi-eq-cao-khong-lam-4865612.html",
-    "cat": "giai-tri",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những điều gì người có EQ cao không làm?",
+    "title": "Những bệnh HPV gây ra ở nam giới",
+    "content": "Nam giới nhiễm virus HPV có thể bị các bệnh sùi mào gà, ung thư hầu họng và ung thư hậu môn, với khoảng 40 chủng virus HPV liên quan đến bộ phận sinh dục. Sùi mào gà thường gặp ở người có lối sống tình dục không lành mạnh, trong khi ung thư hầu họng liên quan đến HPV chiếm 60-70% trường hợp. Tiêm vaccine HPV là phương pháp hiệu quả để phòng ngừa các bệnh này, với hai loại vaccine Gardasil và Gardasil 9 hiện có tại Việt Nam.",
+    "link": "https://vnexpress.net/nhung-benh-hpv-gay-ra-o-nam-gioi-4865772.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những bệnh gì do HPV gây ra ở nam giới?",
     "answers": [
       {
-        "text": "Họ không để người khác giới hạn niềm vui của mình.",
+        "text": "Sùi mào gà, ung thư hầu họng, ung thư hậu môn",
         "correct": true
       },
       {
-        "text": "Họ luôn sống trong quá khứ.",
+        "text": "Cúm, sởi, quai bị",
         "correct": false
       },
       {
-        "text": "Họ không bao giờ tha thứ cho người khác.",
+        "text": "Tiểu đường, tăng huyết áp",
         "correct": false
       },
       {
-        "text": "Họ ưu tiên sự hoàn hảo.",
+        "text": "Bệnh tim mạch, đột quỵ",
         "correct": false
       }
     ]
@@ -4762,28 +4793,28 @@
     ]
   },
   {
-    "title": "Những bệnh HPV gây ra ở nam giới",
-    "content": "Nam giới nhiễm virus HPV có thể bị các bệnh sùi mào gà, ung thư hầu họng và ung thư hậu môn, với khoảng 40 chủng virus HPV liên quan đến bộ phận sinh dục. Sùi mào gà thường gặp ở người có lối sống tình dục không lành mạnh, trong khi ung thư hầu họng liên quan đến HPV chiếm 60-70% trường hợp. Tiêm vaccine HPV là phương pháp hiệu quả để phòng ngừa các bệnh này, với hai loại vaccine Gardasil và Gardasil 9 hiện có tại Việt Nam.",
-    "link": "https://vnexpress.net/nhung-benh-hpv-gay-ra-o-nam-gioi-4865772.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những bệnh gì do HPV gây ra ở nam giới?",
+    "title": "Những điều người EQ cao không làm",
+    "content": "Theo tiến sĩ Travis Bradberry, người có trí tuệ cảm xúc cao (EQ) không bao giờ làm những điều như để người khác giới hạn niềm vui của mình, quên bài học từ quá khứ, hay chìm đắm trong vấn đề. Họ cũng không sống trong sự hoàn hảo, không giữ mối hận thù, và biết cách nói 'không' khi cần thiết. Những người này hiểu rằng để duy trì cảm xúc tích cực, họ phải tránh những người tiêu cực và tập trung vào giải pháp thay vì vấn đề.",
+    "link": "https://vnexpress.net/nhung-dieu-nguoi-eq-cao-khong-lam-4865612.html",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những điều gì người có EQ cao không làm?",
     "answers": [
       {
-        "text": "Sùi mào gà, ung thư hầu họng, ung thư hậu môn",
+        "text": "Họ không để người khác giới hạn niềm vui của mình.",
         "correct": true
       },
       {
-        "text": "Cúm, sởi, quai bị",
+        "text": "Họ luôn sống trong quá khứ.",
         "correct": false
       },
       {
-        "text": "Tiểu đường, tăng huyết áp",
+        "text": "Họ không bao giờ tha thứ cho người khác.",
         "correct": false
       },
       {
-        "text": "Bệnh tim mạch, đột quỵ",
+        "text": "Họ ưu tiên sự hoàn hảo.",
         "correct": false
       }
     ]
