--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Kiên Giang khởi tố vụ án tổ chức đưa người xuất cảnh trái phép bằng tàu cá",
+    "content": "Ngày 26-3, Công an tỉnh Kiên Giang đã khởi tố vụ án tổ chức đưa người xuất cảnh trái phép bằng tàu cá, liên quan đến tàu cá KG 95541 TS do bà N.T.K.C. làm chủ. Tàu này đã mất tín hiệu kết nối và bị phát hiện khi đang hoạt động gần phường An Thới, Phú Quốc. Lực lượng chức năng Thái Lan đã bắt giữ tàu cá này trên vùng biển của họ và Công an Kiên Giang đang tiến hành điều tra làm rõ sự việc.",
+    "link": "https://tuoitre.vn/kien-giang-khoi-to-vu-an-to-chuc-dua-nguoi-xuat-canh-trai-phep-bang-tau-ca-2025032617233469.htm",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Vụ án nào vừa được khởi tố tại Kiên Giang liên quan đến việc xuất cảnh trái phép?",
+    "answers": [
+      {
+        "text": "Tổ chức đưa người xuất cảnh trái phép bằng tàu cá",
+        "correct": true
+      },
+      {
+        "text": "Đưa người xuất cảnh hợp pháp",
+        "correct": false
+      },
+      {
+        "text": "Vụ án trộm cắp tài sản",
+        "correct": false
+      },
+      {
+        "text": "Khai thác IUU trên biển",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức buôn lậu hàng hóa",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tập đoàn PDSI đề nghị đầu tư tổ hợp dịch vụ, sân golf 2,6 tỉ USD tại Bình Thuận",
     "content": "Tập đoàn PDSI đã đề nghị đầu tư một tổ hợp dịch vụ và sân golf tại Bình Thuận với tổng vốn khoảng 2,6 tỉ USD. Dự án có quy mô 425 ha và bao gồm các hạng mục như khách sạn, trung tâm mua sắm và căn hộ cao cấp. Chủ tịch UBND tỉnh Bình Thuận, Đỗ Hữu Huy, hoan nghênh đề xuất này, cho rằng nó phù hợp với định hướng phát triển của tỉnh và cam kết hỗ trợ để dự án sớm được triển khai.",
     "link": "https://tuoitre.vn/tap-doan-pdsi-de-nghi-dau-tu-to-hop-dich-vu-san-golf-2-6-ti-usd-tai-binh-thuan-20250326175356102.htm",
@@ -291,33 +322,6 @@
     ]
   },
   {
-    "title": "8 thói quen mỗi ngày giúp đi ngủ sớm",
-    "content": "Bài viết trình bày 8 thói quen giúp mọi người đi ngủ sớm hơn, bao gồm việc duy trì lịch trình ngủ, tránh caffeine và giảm thời gian sử dụng điện thoại trước khi ngủ. Ngủ đủ giấc từ 7-9 giờ mỗi đêm rất quan trọng cho sức khỏe tổng thể, góp phần giảm căng thẳng và cải thiện tâm trạng. Ngoài ra, các mẹo như thư giãn trước khi ngủ, tránh ăn nhiều và không tập thể dục muộn cũng được đề cập để hỗ trợ thói quen ngủ sớm.",
-    "link": "https://vnexpress.net/8-thoi-quen-moi-ngay-giup-di-ngu-som-4866098.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để cải thiện thói quen ngủ sớm hàng ngày?",
-    "answers": [
-      {
-        "text": "Duy trì lịch trình ngủ nhất quán.",
-        "correct": true
-      },
-      {
-        "text": "Uống nhiều cà phê vào buổi tối.",
-        "correct": false
-      },
-      {
-        "text": "Xem tivi trước khi đi ngủ.",
-        "correct": false
-      },
-      {
-        "text": "Không cần thư giãn trước khi ngủ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Melo: 'Với một chân, Neymar vẫn là cầu thủ hay nhất Brazil'",
     "content": "Felipe Melo, cựu tiền vệ Brazil, bày tỏ sự ủng hộ mạnh mẽ đối với Neymar sau thất bại 1-4 của Brazil trước Argentina trong vòng loại World Cup 2026. Melo khẳng định rằng Neymar, dù chỉ có một chân, vẫn là cầu thủ xuất sắc nhất Brazil và cần sớm trở lại đội tuyển. Ông chỉ trích sự thiếu quyết tâm và tinh thần chiến đấu của đội tuyển Brazil, nhấn mạnh rằng họ cần phải đoàn kết và chiến đấu vì nhau.",
     "link": "https://vnexpress.net/melo-voi-mot-chan-neymar-van-la-cau-thu-hay-nhat-brazil-4866176.html",
@@ -340,6 +344,33 @@
       },
       {
         "text": "Brazil không cần thay đổi gì.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "8 thói quen mỗi ngày giúp đi ngủ sớm",
+    "content": "Bài viết trình bày 8 thói quen giúp mọi người đi ngủ sớm hơn, bao gồm việc duy trì lịch trình ngủ, tránh caffeine và giảm thời gian sử dụng điện thoại trước khi ngủ. Ngủ đủ giấc từ 7-9 giờ mỗi đêm rất quan trọng cho sức khỏe tổng thể, góp phần giảm căng thẳng và cải thiện tâm trạng. Ngoài ra, các mẹo như thư giãn trước khi ngủ, tránh ăn nhiều và không tập thể dục muộn cũng được đề cập để hỗ trợ thói quen ngủ sớm.",
+    "link": "https://vnexpress.net/8-thoi-quen-moi-ngay-giup-di-ngu-som-4866098.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Làm thế nào để cải thiện thói quen ngủ sớm hàng ngày?",
+    "answers": [
+      {
+        "text": "Duy trì lịch trình ngủ nhất quán.",
+        "correct": true
+      },
+      {
+        "text": "Uống nhiều cà phê vào buổi tối.",
+        "correct": false
+      },
+      {
+        "text": "Xem tivi trước khi đi ngủ.",
+        "correct": false
+      },
+      {
+        "text": "Không cần thư giãn trước khi ngủ.",
         "correct": false
       }
     ]
@@ -461,6 +492,33 @@
     ]
   },
   {
+    "title": "Điều nên làm khi huyết áp không giảm",
+    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
+    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
+    "answers": [
+      {
+        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
+        "correct": true
+      },
+      {
+        "text": "Bỏ thuốc điều trị hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường uống rượu.",
+        "correct": false
+      },
+      {
+        "text": "Hạn chế uống nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người trẻ bị run tay có nguy hiểm không?",
     "content": "Người trẻ bị run tay thường do căng thẳng hoặc rối loạn hệ thần kinh thực vật. Tình trạng này có thể là phản ứng tự nhiên hoặc triệu chứng của các bệnh lý nghiêm trọng như bệnh Parkinson hoặc cường giáp. Nếu run tay chỉ xảy ra khi căng thẳng thì không quá nguy hiểm, nhưng nếu triệu chứng kéo dài hoặc ảnh hưởng đến sinh hoạt hàng ngày, cần đi khám bác sĩ để xác định nguyên nhân và điều trị kịp thời. Việc duy trì lối sống lành mạnh và cân bằng giữa công việc và nghỉ ngơi cũng rất quan trọng.",
     "link": "https://vnexpress.net/nguoi-tre-bi-run-tay-co-nguy-hiem-khong-4866229.html",
@@ -487,33 +545,6 @@
       },
       {
         "text": "Chỉ ảnh hưởng đến sức khỏe tâm lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Điều nên làm khi huyết áp không giảm",
-    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
-    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
-    "answers": [
-      {
-        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
-        "correct": true
-      },
-      {
-        "text": "Bỏ thuốc điều trị hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường uống rượu.",
-        "correct": false
-      },
-      {
-        "text": "Hạn chế uống nước.",
         "correct": false
       }
     ]
@@ -1388,6 +1419,33 @@
     ]
   },
   {
+    "title": "\"Nàng Bạch Tuyết\" bị giới chuyên môn chấm điểm thấp, doanh thu thảm hại",
+    "content": "Phim nhạc kịch \"Nàng Bạch Tuyết\" của Disney, ra mắt vào ngày 21/3, đã gây ra nhiều tranh cãi và nhận điểm đánh giá thấp từ giới chuyên môn cũng như khán giả. Với điểm IMDb chỉ 1,7/10 và doanh thu toàn cầu đạt 87,3 triệu USD, thấp hơn kỳ vọng 100 triệu USD, bộ phim không đạt được sự đón nhận tích cực. Các ý kiến phản hồi chủ yếu chỉ trích cốt truyện và sự thay đổi trong kịch bản so với phiên bản hoạt hình gốc.",
+    "link": "https://dantri.com.vn/giai-tri/nang-bach-tuyet-bi-gioi-chuyen-mon-cham-diem-thap-doanh-thu-tham-hai-20250326131023126.htm",
+    "cat": "giai-tri",
+    "positivity": 2,
+    "importance": 6,
+    "question": "Tại sao \"Nàng Bạch Tuyết\" bị chấm điểm thấp?",
+    "answers": [
+      {
+        "text": "Do cốt truyện không hấp dẫn và sự thay đổi kịch bản.",
+        "correct": true
+      },
+      {
+        "text": "Vì diễn viên chính không được yêu thích.",
+        "correct": false
+      },
+      {
+        "text": "Do phim không được quảng bá tốt.",
+        "correct": false
+      },
+      {
+        "text": "Vì nội dung phim không phù hợp với khán giả.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nông dân có thuốc đặc trị \"ung thư\" cây trồng",
     "content": "Công ty Syngenta Việt Nam vừa ra mắt sản phẩm bảo vệ thực vật Vaniva® 45SC, chuyên trị bệnh vàng lá và thối rễ do tuyến trùng gây ra trên cây trồng. Sản phẩm này đã được khảo nghiệm trên hàng trăm loại cây trồng tại hơn 60 quốc gia và cho thấy hiệu quả cao trong việc diệt triệt để tuyến trùng và bảo vệ rễ cây. Vaniva® 45SC không chỉ giúp cây trồng phát triển khỏe mạnh mà còn không gây tác hại xấu đến chất lượng đất, hỗ trợ nông nghiệp bền vững.",
     "link": "https://tuoitre.vn/nong-dan-co-thuoc-dac-tri-ung-thu-cay-trong-20250326140353423.htm",
@@ -1414,33 +1472,6 @@
       },
       {
         "text": "Herbicide D",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Nàng Bạch Tuyết\" bị giới chuyên môn chấm điểm thấp, doanh thu thảm hại",
-    "content": "Phim nhạc kịch \"Nàng Bạch Tuyết\" của Disney, ra mắt vào ngày 21/3, đã gây ra nhiều tranh cãi và nhận điểm đánh giá thấp từ giới chuyên môn cũng như khán giả. Với điểm IMDb chỉ 1,7/10 và doanh thu toàn cầu đạt 87,3 triệu USD, thấp hơn kỳ vọng 100 triệu USD, bộ phim không đạt được sự đón nhận tích cực. Các ý kiến phản hồi chủ yếu chỉ trích cốt truyện và sự thay đổi trong kịch bản so với phiên bản hoạt hình gốc.",
-    "link": "https://dantri.com.vn/giai-tri/nang-bach-tuyet-bi-gioi-chuyen-mon-cham-diem-thap-doanh-thu-tham-hai-20250326131023126.htm",
-    "cat": "giai-tri",
-    "positivity": 2,
-    "importance": 6,
-    "question": "Tại sao \"Nàng Bạch Tuyết\" bị chấm điểm thấp?",
-    "answers": [
-      {
-        "text": "Do cốt truyện không hấp dẫn và sự thay đổi kịch bản.",
-        "correct": true
-      },
-      {
-        "text": "Vì diễn viên chính không được yêu thích.",
-        "correct": false
-      },
-      {
-        "text": "Do phim không được quảng bá tốt.",
-        "correct": false
-      },
-      {
-        "text": "Vì nội dung phim không phù hợp với khán giả.",
         "correct": false
       }
     ]
@@ -2984,33 +3015,6 @@
     ]
   },
   {
-    "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
-    "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
-    "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 5,
-    "question": "Tại sao hắt hơi khi hít phải tiêu hay hành tây?",
-    "answers": [
-      {
-        "text": "Vì các hợp chất trong tiêu và hành tây kích thích niêm mạc mũi.",
-        "correct": true
-      },
-      {
-        "text": "Vì đây là dấu hiệu của bệnh dị ứng.",
-        "correct": false
-      },
-      {
-        "text": "Vì không khí lạnh làm cho mũi nhạy cảm hơn.",
-        "correct": false
-      },
-      {
-        "text": "Vì tiêu và hành tây có mùi hôi mạnh.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ho ra đờm màu vàng có phải dấu hiệu bệnh?",
     "content": "Ho ra đờm màu vàng có thể là dấu hiệu của các bệnh hô hấp như viêm phế quản, viêm phổi hoặc hen suyễn. Màu vàng của đờm chủ yếu do sự hiện diện của bạch cầu trung tính đã chết, cho thấy cơ thể đang phản ứng với nhiễm trùng. Nếu tình trạng này kéo dài hơn một tuần hoặc kèm theo các triệu chứng như sốt, khó thở, người bệnh nên đi khám bác sĩ để được chẩn đoán và điều trị kịp thời.",
     "link": "https://vnexpress.net/ho-ra-dom-mau-vang-co-phai-dau-hieu-benh-4865965.html",
@@ -3064,6 +3068,33 @@
       },
       {
         "text": "80 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
+    "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
+    "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 5,
+    "question": "Tại sao hắt hơi khi hít phải tiêu hay hành tây?",
+    "answers": [
+      {
+        "text": "Vì các hợp chất trong tiêu và hành tây kích thích niêm mạc mũi.",
+        "correct": true
+      },
+      {
+        "text": "Vì đây là dấu hiệu của bệnh dị ứng.",
+        "correct": false
+      },
+      {
+        "text": "Vì không khí lạnh làm cho mũi nhạy cảm hơn.",
+        "correct": false
+      },
+      {
+        "text": "Vì tiêu và hành tây có mùi hôi mạnh.",
         "correct": false
       }
     ]
@@ -4793,6 +4824,33 @@
     ]
   },
   {
+    "title": "Những bệnh HPV gây ra ở nam giới",
+    "content": "Nam giới nhiễm virus HPV có thể bị các bệnh sùi mào gà, ung thư hầu họng và ung thư hậu môn, với khoảng 40 chủng virus HPV liên quan đến bộ phận sinh dục. Sùi mào gà thường gặp ở người có lối sống tình dục không lành mạnh, trong khi ung thư hầu họng liên quan đến HPV chiếm 60-70% trường hợp. Tiêm vaccine HPV là phương pháp hiệu quả để phòng ngừa các bệnh này, với hai loại vaccine Gardasil và Gardasil 9 hiện có tại Việt Nam.",
+    "link": "https://vnexpress.net/nhung-benh-hpv-gay-ra-o-nam-gioi-4865772.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những bệnh gì do HPV gây ra ở nam giới?",
+    "answers": [
+      {
+        "text": "Sùi mào gà, ung thư hầu họng, ung thư hậu môn",
+        "correct": true
+      },
+      {
+        "text": "Cúm, sởi, quai bị",
+        "correct": false
+      },
+      {
+        "text": "Tiểu đường, tăng huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tim mạch, đột quỵ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Doãn Hải My thu hút ánh nhìn với phong cách nữ tính",
     "content": "Doãn Hải My, vợ cầu thủ Đoàn Văn Hậu, đã thu hút được sự chú ý của giới mộ điệu thời trang với phong cách nữ tính và hiện đại. Cô đã phối đồ và lựa chọn túi xách theo xu hướng thời trang đang được ưa chuộng toàn cầu, đặc biệt là các mẫu túi mini. Thiết kế trang phục của cô mang đậm dấu ấn cá tính và thanh lịch, phù hợp với xu hướng mùa xuân hè năm nay.",
     "link": "https://dantri.com.vn/giai-tri/doan-hai-my-thu-hut-anh-nhin-voi-phong-cach-nu-tinh-20250324173039479.htm",
@@ -4819,33 +4877,6 @@
       },
       {
         "text": "Phong cách công sở",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Những bệnh HPV gây ra ở nam giới",
-    "content": "Nam giới nhiễm virus HPV có thể bị các bệnh sùi mào gà, ung thư hầu họng và ung thư hậu môn, với khoảng 40 chủng virus HPV liên quan đến bộ phận sinh dục. Sùi mào gà thường gặp ở người có lối sống tình dục không lành mạnh, trong khi ung thư hầu họng liên quan đến HPV chiếm 60-70% trường hợp. Tiêm vaccine HPV là phương pháp hiệu quả để phòng ngừa các bệnh này, với hai loại vaccine Gardasil và Gardasil 9 hiện có tại Việt Nam.",
-    "link": "https://vnexpress.net/nhung-benh-hpv-gay-ra-o-nam-gioi-4865772.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những bệnh gì do HPV gây ra ở nam giới?",
-    "answers": [
-      {
-        "text": "Sùi mào gà, ung thư hầu họng, ung thư hậu môn",
-        "correct": true
-      },
-      {
-        "text": "Cúm, sởi, quai bị",
-        "correct": false
-      },
-      {
-        "text": "Tiểu đường, tăng huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Bệnh tim mạch, đột quỵ",
         "correct": false
       }
     ]
