--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,60 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Người Trung Quốc ngày càng chuộng lối sống 'cú đêm'",
+    "content": "Khảo sát từ Hiệp hội nghiên cứu giấc ngủ Trung Quốc cho thấy người Trung Quốc, đặc biệt là giới trẻ, ngày càng chuộng lối sống 'cú đêm', với trung bình thời gian đi ngủ là 1h sáng. Khoảng 80% sinh viên đại học đi ngủ sau nửa đêm, nhiều người thức tới 2h sáng vì lý do công việc và trách nhiệm trong ngày. Sự trì hoãn giấc ngủ này dẫn đến tình trạng rối loạn giấc ngủ ngày càng phổ biến, và các chuyên gia khuyến cáo cần cải thiện thói quen ngủ để duy trì sức khỏe tốt.",
+    "link": "https://vnexpress.net/nguoi-trung-quoc-ngay-cang-chuong-loi-song-cu-dem-4865859.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao người Trung Quốc lại chuộng lối sống 'cú đêm'?",
+    "answers": [
+      {
+        "text": "Vì cảm thấy không đủ thời gian cho bản thân trong ngày.",
+        "correct": true
+      },
+      {
+        "text": "Vì họ không thích ngủ.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ có nhiều công việc vào ban ngày.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ muốn thức khuya để xem phim.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "FPT đẩy mạnh đầu tư giáo dục tại Huế",
+    "content": "FPT vừa tổ chức lễ cất nóc cho tổ hợp giáo dục tại Huế, đánh dấu một bước tiến quan trọng trong việc phát triển giáo dục tại khu vực miền Trung - Tây Nguyên. Dự án này sẽ phục vụ cho 20.000 học sinh, bao gồm các bậc học từ tiểu học đến giáo dục nghề nghiệp. FPT cam kết nâng cao chất lượng giáo dục và phát triển nguồn nhân lực số, đồng thời góp phần thúc đẩy sự phát triển kinh tế xã hội của địa phương.",
+    "link": "https://dantri.com.vn/giao-duc/fpt-day-manh-dau-tu-giao-duc-tai-hue-20250326171903168.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "FPT vừa đầu tư tổ hợp giáo dục nào tại Huế?",
+    "answers": [
+      {
+        "text": "Tổ hợp giáo dục FPT",
+        "correct": true
+      },
+      {
+        "text": "Tổ hợp văn hóa",
+        "correct": false
+      },
+      {
+        "text": "Trường đại học quốc tế",
+        "correct": false
+      },
+      {
+        "text": "Trường tiểu học tư thục",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Khi chạy bộ trở thành liệu pháp 'chữa lành'",
     "content": "Chạy bộ đã trở thành một liệu pháp tinh thần hữu ích cho những ai cần tìm lại sự cân bằng trong cuộc sống. Nhiều người không còn xem chạy bộ là một cuộc đua mà là hành trình tự đối thoại và kết nối với bản thân và cộng đồng. Nghiên cứu chỉ ra rằng chạy bộ kích thích sản sinh các hormone tích cực, giúp cải thiện tâm trạng và cảm giác gắn kết. Tuy nhiên, các chuyên gia cũng lưu ý rằng chạy bộ không phải là phương thuốc cho mọi vấn đề tâm lý mà chỉ là một phần trong lối sống lành mạnh.",
     "link": "https://vnexpress.net/khi-chay-bo-tro-thanh-lieu-phap-chua-lanh-4865058.html",
@@ -572,6 +626,33 @@
     ]
   },
   {
+    "title": "Điều nên làm khi huyết áp không giảm",
+    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
+    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
+    "answers": [
+      {
+        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
+        "correct": true
+      },
+      {
+        "text": "Bỏ thuốc điều trị hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường uống rượu.",
+        "correct": false
+      },
+      {
+        "text": "Hạn chế uống nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người trẻ bị run tay có nguy hiểm không?",
     "content": "Người trẻ bị run tay thường do căng thẳng hoặc rối loạn hệ thần kinh thực vật. Tình trạng này có thể là phản ứng tự nhiên hoặc triệu chứng của các bệnh lý nghiêm trọng như bệnh Parkinson hoặc cường giáp. Nếu run tay chỉ xảy ra khi căng thẳng thì không quá nguy hiểm, nhưng nếu triệu chứng kéo dài hoặc ảnh hưởng đến sinh hoạt hàng ngày, cần đi khám bác sĩ để xác định nguyên nhân và điều trị kịp thời. Việc duy trì lối sống lành mạnh và cân bằng giữa công việc và nghỉ ngơi cũng rất quan trọng.",
     "link": "https://vnexpress.net/nguoi-tre-bi-run-tay-co-nguy-hiem-khong-4866229.html",
@@ -598,33 +679,6 @@
       },
       {
         "text": "Chỉ ảnh hưởng đến sức khỏe tâm lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Điều nên làm khi huyết áp không giảm",
-    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
-    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
-    "answers": [
-      {
-        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
-        "correct": true
-      },
-      {
-        "text": "Bỏ thuốc điều trị hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường uống rượu.",
-        "correct": false
-      },
-      {
-        "text": "Hạn chế uống nước.",
         "correct": false
       }
     ]
@@ -970,6 +1024,33 @@
     ]
   },
   {
+    "title": "Điều gì xảy ra khi hormone estrogen, testosterone giảm?",
+    "content": "Khi hormone estrogen và testosterone giảm, sức khỏe và sinh lý của phụ nữ có thể bị ảnh hưởng nghiêm trọng. Estrogen là hormone chính trong hệ sinh sản của nữ giới, và sự giảm sút của nó có thể dẫn đến tình trạng mãn kinh và suy buồng trứng. Ngoài ra, testosterone cũng đóng vai trò quan trọng trong việc duy trì sức khỏe xương và tâm trạng, và khi giảm, có thể gây ra triệu chứng như mệt mỏi và suy giảm khả năng sinh lý.",
+    "link": "https://vnexpress.net/dieu-gi-xay-ra-khi-hormone-estrogen-testosterone-giam-4866052.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Hormone estrogen và testosterone giảm gây ra những hậu quả gì cho sức khỏe phụ nữ?",
+    "answers": [
+      {
+        "text": "Giảm ham muốn tình dục, mệt mỏi, và suy giảm sức khỏe sinh lý.",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường sức khỏe xương và tinh thần.",
+        "correct": false
+      },
+      {
+        "text": "Giảm nguy cơ mắc các bệnh phụ khoa.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường năng lượng và cải thiện tâm trạng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tiêm corticoid trị sẹo lồi",
     "content": "Tiêm corticoid, đặc biệt là triamcinolone, được sử dụng để điều trị sẹo lồi bằng cách giảm quá trình viêm và sản xuất collagen. Phương pháp này giúp cải thiện thẩm mỹ và giảm triệu chứng như ngứa rát ở những người có sẹo lồi. Để đạt hiệu quả tốt nhất, bệnh nhân cần được khám và tiêm đúng cách, và có thể cần đến vài buổi điều trị. Tuy nhiên, liệu pháp này không phù hợp cho một số trường hợp cụ thể như phụ nữ mang thai hay người có bệnh lý nền nghiêm trọng.",
     "link": "https://vnexpress.net/tiem-corticoid-tri-seo-loi-4866174.html",
@@ -1019,33 +1100,6 @@
       },
       {
         "text": "Cộng đồng người Pháp",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Điều gì xảy ra khi hormone estrogen, testosterone giảm?",
-    "content": "Khi hormone estrogen và testosterone giảm, sức khỏe và sinh lý của phụ nữ có thể bị ảnh hưởng nghiêm trọng. Estrogen là hormone chính trong hệ sinh sản của nữ giới, và sự giảm sút của nó có thể dẫn đến tình trạng mãn kinh và suy buồng trứng. Ngoài ra, testosterone cũng đóng vai trò quan trọng trong việc duy trì sức khỏe xương và tâm trạng, và khi giảm, có thể gây ra triệu chứng như mệt mỏi và suy giảm khả năng sinh lý.",
-    "link": "https://vnexpress.net/dieu-gi-xay-ra-khi-hormone-estrogen-testosterone-giam-4866052.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Hormone estrogen và testosterone giảm gây ra những hậu quả gì cho sức khỏe phụ nữ?",
-    "answers": [
-      {
-        "text": "Giảm ham muốn tình dục, mệt mỏi, và suy giảm sức khỏe sinh lý.",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường sức khỏe xương và tinh thần.",
-        "correct": false
-      },
-      {
-        "text": "Giảm nguy cơ mắc các bệnh phụ khoa.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường năng lượng và cải thiện tâm trạng.",
         "correct": false
       }
     ]
@@ -1472,33 +1526,6 @@
     ]
   },
   {
-    "title": "\"Nàng Bạch Tuyết\" bị giới chuyên môn chấm điểm thấp, doanh thu thảm hại",
-    "content": "Phim nhạc kịch \"Nàng Bạch Tuyết\" của Disney, ra mắt vào ngày 21/3, đã gây ra nhiều tranh cãi và nhận điểm đánh giá thấp từ giới chuyên môn cũng như khán giả. Với điểm IMDb chỉ 1,7/10 và doanh thu toàn cầu đạt 87,3 triệu USD, thấp hơn kỳ vọng 100 triệu USD, bộ phim không đạt được sự đón nhận tích cực. Các ý kiến phản hồi chủ yếu chỉ trích cốt truyện và sự thay đổi trong kịch bản so với phiên bản hoạt hình gốc.",
-    "link": "https://dantri.com.vn/giai-tri/nang-bach-tuyet-bi-gioi-chuyen-mon-cham-diem-thap-doanh-thu-tham-hai-20250326131023126.htm",
-    "cat": "giai-tri",
-    "positivity": 2,
-    "importance": 6,
-    "question": "Tại sao \"Nàng Bạch Tuyết\" bị chấm điểm thấp?",
-    "answers": [
-      {
-        "text": "Do cốt truyện không hấp dẫn và sự thay đổi kịch bản.",
-        "correct": true
-      },
-      {
-        "text": "Vì diễn viên chính không được yêu thích.",
-        "correct": false
-      },
-      {
-        "text": "Do phim không được quảng bá tốt.",
-        "correct": false
-      },
-      {
-        "text": "Vì nội dung phim không phù hợp với khán giả.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nông dân có thuốc đặc trị \"ung thư\" cây trồng",
     "content": "Công ty Syngenta Việt Nam vừa ra mắt sản phẩm bảo vệ thực vật Vaniva® 45SC, chuyên trị bệnh vàng lá và thối rễ do tuyến trùng gây ra trên cây trồng. Sản phẩm này đã được khảo nghiệm trên hàng trăm loại cây trồng tại hơn 60 quốc gia và cho thấy hiệu quả cao trong việc diệt triệt để tuyến trùng và bảo vệ rễ cây. Vaniva® 45SC không chỉ giúp cây trồng phát triển khỏe mạnh mà còn không gây tác hại xấu đến chất lượng đất, hỗ trợ nông nghiệp bền vững.",
     "link": "https://tuoitre.vn/nong-dan-co-thuoc-dac-tri-ung-thu-cay-trong-20250326140353423.htm",
@@ -1525,6 +1552,33 @@
       },
       {
         "text": "Herbicide D",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Nàng Bạch Tuyết\" bị giới chuyên môn chấm điểm thấp, doanh thu thảm hại",
+    "content": "Phim nhạc kịch \"Nàng Bạch Tuyết\" của Disney, ra mắt vào ngày 21/3, đã gây ra nhiều tranh cãi và nhận điểm đánh giá thấp từ giới chuyên môn cũng như khán giả. Với điểm IMDb chỉ 1,7/10 và doanh thu toàn cầu đạt 87,3 triệu USD, thấp hơn kỳ vọng 100 triệu USD, bộ phim không đạt được sự đón nhận tích cực. Các ý kiến phản hồi chủ yếu chỉ trích cốt truyện và sự thay đổi trong kịch bản so với phiên bản hoạt hình gốc.",
+    "link": "https://dantri.com.vn/giai-tri/nang-bach-tuyet-bi-gioi-chuyen-mon-cham-diem-thap-doanh-thu-tham-hai-20250326131023126.htm",
+    "cat": "giai-tri",
+    "positivity": 2,
+    "importance": 6,
+    "question": "Tại sao \"Nàng Bạch Tuyết\" bị chấm điểm thấp?",
+    "answers": [
+      {
+        "text": "Do cốt truyện không hấp dẫn và sự thay đổi kịch bản.",
+        "correct": true
+      },
+      {
+        "text": "Vì diễn viên chính không được yêu thích.",
+        "correct": false
+      },
+      {
+        "text": "Do phim không được quảng bá tốt.",
+        "correct": false
+      },
+      {
+        "text": "Vì nội dung phim không phù hợp với khán giả.",
         "correct": false
       }
     ]
