Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -175,28 +175,28 @@
     ]
   },
   {
-    "title": "FPT đẩy mạnh đầu tư giáo dục tại Huế",
-    "content": "FPT vừa tổ chức lễ cất nóc cho tổ hợp giáo dục tại Huế, đánh dấu một bước tiến quan trọng trong việc phát triển giáo dục tại khu vực miền Trung - Tây Nguyên. Dự án này sẽ phục vụ cho 20.000 học sinh, bao gồm các bậc học từ tiểu học đến giáo dục nghề nghiệp. FPT cam kết nâng cao chất lượng giáo dục và phát triển nguồn nhân lực số, đồng thời góp phần thúc đẩy sự phát triển kinh tế xã hội của địa phương.",
-    "link": "https://dantri.com.vn/giao-duc/fpt-day-manh-dau-tu-giao-duc-tai-hue-20250326171903168.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "FPT vừa đầu tư tổ hợp giáo dục nào tại Huế?",
+    "title": "Bé trai béo phì nhưng thiếu máu",
+    "content": "Bé Bo, 5 tuổi, được chẩn đoán béo phì nhưng lại thiếu máu và một số vi chất dinh dưỡng. Sau 5 tháng, Bo đã tăng 11 kg nhưng chiều cao không tăng tương ứng, gây lo ngại về sức khỏe. Bác sĩ khuyên rằng chế độ ăn uống của bé cần thay đổi, nên ngừng sữa cao năng lượng và ăn đa dạng thực phẩm, đồng thời tăng cường vận động để cải thiện tình trạng sức khỏe.",
+    "link": "https://vnexpress.net/be-trai-beo-phi-nhung-thieu-mau-4866244.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao bé Bo bị thiếu máu mặc dù béo phì?",
     "answers": [
       {
-        "text": "Tổ hợp giáo dục FPT",
+        "text": "Do chế độ ăn uống không khoa học",
         "correct": true
       },
       {
-        "text": "Tổ hợp văn hóa",
+        "text": "Vì bé không uống đủ sữa",
         "correct": false
       },
       {
-        "text": "Trường đại học quốc tế",
+        "text": "Do bé không tập thể dục",
         "correct": false
       },
       {
-        "text": "Trường tiểu học tư thục",
+        "text": "Vì bé bị bệnh di truyền",
         "correct": false
       }
     ]
@@ -228,6 +228,33 @@
       },
       {
         "text": "Không có tác dụng gì đối với sức khỏe tâm thần",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "FPT đẩy mạnh đầu tư giáo dục tại Huế",
+    "content": "FPT vừa tổ chức lễ cất nóc cho tổ hợp giáo dục tại Huế, đánh dấu một bước tiến quan trọng trong việc phát triển giáo dục tại khu vực miền Trung - Tây Nguyên. Dự án này sẽ phục vụ cho 20.000 học sinh, bao gồm các bậc học từ tiểu học đến giáo dục nghề nghiệp. FPT cam kết nâng cao chất lượng giáo dục và phát triển nguồn nhân lực số, đồng thời góp phần thúc đẩy sự phát triển kinh tế xã hội của địa phương.",
+    "link": "https://dantri.com.vn/giao-duc/fpt-day-manh-dau-tu-giao-duc-tai-hue-20250326171903168.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "FPT vừa đầu tư tổ hợp giáo dục nào tại Huế?",
+    "answers": [
+      {
+        "text": "Tổ hợp giáo dục FPT",
+        "correct": true
+      },
+      {
+        "text": "Tổ hợp văn hóa",
+        "correct": false
+      },
+      {
+        "text": "Trường đại học quốc tế",
+        "correct": false
+      },
+      {
+        "text": "Trường tiểu học tư thục",
         "correct": false
       }
     ]
@@ -317,6 +344,33 @@
       },
       {
         "text": "10-11/6/2025",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bệnh viện Từ Dũ chuyển giao công nghệ nha khoa từ Nhật Bản",
+    "content": "Bệnh viện Từ Dũ vừa hợp tác với Hiệp hội Sakura Nhật Bản để ra mắt phòng khám nha khoa dành riêng cho thai phụ, với sự hỗ trợ từ Bệnh viện Răng Hàm Mặt TP HCM. Phòng khám nhằm phát hiện và điều trị sớm các bệnh lý nha khoa thường gặp ở thai phụ, như viêm nha chu và u nướu thai kỳ. Dự kiến, thai phụ sẽ được kiểm tra răng miệng định kỳ trong thai kỳ ít nhất một lần, để bảo vệ sức khỏe cho mẹ và thai nhi.",
+    "link": "https://vnexpress.net/benh-vien-tu-du-chuyen-giao-cong-nghe-nha-khoa-tu-nhat-ban-4865973.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Phòng khám nha khoa tại Bệnh viện Từ Dũ phục vụ đối tượng nào?",
+    "answers": [
+      {
+        "text": "Thai phụ",
+        "correct": true
+      },
+      {
+        "text": "Trẻ em",
+        "correct": false
+      },
+      {
+        "text": "Người cao tuổi",
+        "correct": false
+      },
+      {
+        "text": "Người mắc bệnh mãn tính",
         "correct": false
       }
     ]
@@ -523,33 +577,6 @@
     ]
   },
   {
-    "title": "8 thói quen mỗi ngày giúp đi ngủ sớm",
-    "content": "Bài viết trình bày 8 thói quen giúp mọi người đi ngủ sớm hơn, bao gồm việc duy trì lịch trình ngủ, tránh caffeine và giảm thời gian sử dụng điện thoại trước khi ngủ. Ngủ đủ giấc từ 7-9 giờ mỗi đêm rất quan trọng cho sức khỏe tổng thể, góp phần giảm căng thẳng và cải thiện tâm trạng. Ngoài ra, các mẹo như thư giãn trước khi ngủ, tránh ăn nhiều và không tập thể dục muộn cũng được đề cập để hỗ trợ thói quen ngủ sớm.",
-    "link": "https://vnexpress.net/8-thoi-quen-moi-ngay-giup-di-ngu-som-4866098.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để cải thiện thói quen ngủ sớm hàng ngày?",
-    "answers": [
-      {
-        "text": "Duy trì lịch trình ngủ nhất quán.",
-        "correct": true
-      },
-      {
-        "text": "Uống nhiều cà phê vào buổi tối.",
-        "correct": false
-      },
-      {
-        "text": "Xem tivi trước khi đi ngủ.",
-        "correct": false
-      },
-      {
-        "text": "Không cần thư giãn trước khi ngủ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Melo: 'Với một chân, Neymar vẫn là cầu thủ hay nhất Brazil'",
     "content": "Felipe Melo, cựu tiền vệ Brazil, bày tỏ sự ủng hộ mạnh mẽ đối với Neymar sau thất bại 1-4 của Brazil trước Argentina trong vòng loại World Cup 2026. Melo khẳng định rằng Neymar, dù chỉ có một chân, vẫn là cầu thủ xuất sắc nhất Brazil và cần sớm trở lại đội tuyển. Ông chỉ trích sự thiếu quyết tâm và tinh thần chiến đấu của đội tuyển Brazil, nhấn mạnh rằng họ cần phải đoàn kết và chiến đấu vì nhau.",
     "link": "https://vnexpress.net/melo-voi-mot-chan-neymar-van-la-cau-thu-hay-nhat-brazil-4866176.html",
@@ -572,6 +599,33 @@
       },
       {
         "text": "Brazil không cần thay đổi gì.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "8 thói quen mỗi ngày giúp đi ngủ sớm",
+    "content": "Bài viết trình bày 8 thói quen giúp mọi người đi ngủ sớm hơn, bao gồm việc duy trì lịch trình ngủ, tránh caffeine và giảm thời gian sử dụng điện thoại trước khi ngủ. Ngủ đủ giấc từ 7-9 giờ mỗi đêm rất quan trọng cho sức khỏe tổng thể, góp phần giảm căng thẳng và cải thiện tâm trạng. Ngoài ra, các mẹo như thư giãn trước khi ngủ, tránh ăn nhiều và không tập thể dục muộn cũng được đề cập để hỗ trợ thói quen ngủ sớm.",
+    "link": "https://vnexpress.net/8-thoi-quen-moi-ngay-giup-di-ngu-som-4866098.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Làm thế nào để cải thiện thói quen ngủ sớm hàng ngày?",
+    "answers": [
+      {
+        "text": "Duy trì lịch trình ngủ nhất quán.",
+        "correct": true
+      },
+      {
+        "text": "Uống nhiều cà phê vào buổi tối.",
+        "correct": false
+      },
+      {
+        "text": "Xem tivi trước khi đi ngủ.",
+        "correct": false
+      },
+      {
+        "text": "Không cần thư giãn trước khi ngủ.",
         "correct": false
       }
     ]
@@ -3189,6 +3243,37 @@
     ]
   },
   {
+    "title": "Tăng 60 kg trong hai năm do mắc chứng cuồng ăn",
+    "content": "Chị Hà, 27 tuổi, đã tăng 60 kg trong hai năm do mắc chứng rối loạn ăn uống sau biến cố hôn nhân. Hiện tại, chị đang được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội với mục tiêu kiểm soát hành vi ăn uống và giảm cân. Các bác sĩ đã hướng dẫn chị xây dựng thói quen ăn uống lành mạnh, kết hợp với liệu pháp tâm lý và thuốc hỗ trợ. Sau hai tháng điều trị, chị đã giảm 6 kg và các chỉ số sức khỏe đang cải thiện dần.",
+    "link": "https://vnexpress.net/tang-60-kg-trong-hai-nam-do-mac-chung-cuong-an-4865900.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Chị Hà đã tăng bao nhiêu kg trong hai năm?",
+    "answers": [
+      {
+        "text": "60 kg",
+        "correct": true
+      },
+      {
+        "text": "50 kg",
+        "correct": false
+      },
+      {
+        "text": "70 kg",
+        "correct": false
+      },
+      {
+        "text": "40 kg",
+        "correct": false
+      },
+      {
+        "text": "80 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vì sao hắt hơi liên tục khi hít tiêu hay hành tây?",
     "content": "Hắt hơi liên tục khi hít phải tiêu hoặc hành tây là một phản xạ tự nhiên của cơ thể do các hợp chất dễ bay hơi trong những thực phẩm này gây ra. Tiêu chứa piperine và hành tây có allyl propyl disulfide, khi hít vào sẽ kích thích niêm mạc mũi và mắt, dẫn đến phản ứng hắt hơi để loại bỏ các chất kích thích. Điều này không nhất thiết là dấu hiệu dị ứng, nhưng những người có niêm mạc nhạy cảm có thể phản ứng mạnh hơn. Để giảm triệu chứng, người dùng nên đeo khẩu trang và giữ không gian thông thoáng khi chế biến các thực phẩm này.",
     "link": "https://vnexpress.net/vi-sao-hat-hoi-lien-tuc-khi-hit-tieu-hay-hanh-tay-4865952.html",
@@ -3238,37 +3323,6 @@
       },
       {
         "text": "Có, nhưng chỉ nếu kèm theo sốt và đau ngực.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tăng 60 kg trong hai năm do mắc chứng cuồng ăn",
-    "content": "Chị Hà, 27 tuổi, đã tăng 60 kg trong hai năm do mắc chứng rối loạn ăn uống sau biến cố hôn nhân. Hiện tại, chị đang được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội với mục tiêu kiểm soát hành vi ăn uống và giảm cân. Các bác sĩ đã hướng dẫn chị xây dựng thói quen ăn uống lành mạnh, kết hợp với liệu pháp tâm lý và thuốc hỗ trợ. Sau hai tháng điều trị, chị đã giảm 6 kg và các chỉ số sức khỏe đang cải thiện dần.",
-    "link": "https://vnexpress.net/tang-60-kg-trong-hai-nam-do-mac-chung-cuong-an-4865900.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Chị Hà đã tăng bao nhiêu kg trong hai năm?",
-    "answers": [
-      {
-        "text": "60 kg",
-        "correct": true
-      },
-      {
-        "text": "50 kg",
-        "correct": false
-      },
-      {
-        "text": "70 kg",
-        "correct": false
-      },
-      {
-        "text": "40 kg",
-        "correct": false
-      },
-      {
-        "text": "80 kg",
         "correct": false
       }
     ]
@@ -4179,28 +4233,28 @@
     ]
   },
   {
-    "title": "Diễn viên \"Mùi ngò gai\" giải nghệ sang Mỹ: Luôn nhớ quê, phát hiện khối u",
-    "content": "Nghệ sĩ Minh Hoàng, nổi tiếng với vai diễn trong phim \"Mùi ngò gai\", đã chọn định cư tại Mỹ từ năm 2022. Mặc dù đã tuyên bố giải nghệ, ông vẫn thể hiện tình yêu với nghệ thuật bằng cách trở lại tham gia một dự án phim mới. Gần đây, ông gặp phải lo ngại về sức khỏe khi bác sĩ phát hiện một khối u ở phổi, nhưng sau nhiều kiểm tra, may mắn là đó chỉ là u lành tính. Ông chia sẻ rằng cuộc sống ở xứ người mang lại cho ông nhiều kỷ niệm và sự bình yên, mặc dù luôn nhớ quê hương.",
-    "link": "https://dantri.com.vn/giai-tri/dien-vien-mui-ngo-gai-giai-nghe-sang-my-luon-nho-que-phat-hien-khoi-u-20250325150310170.htm",
-    "cat": "giai-tri",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Nghệ sĩ Minh Hoàng đã gặp vấn đề gì về sức khỏe gần đây?",
+    "title": "Cả xóm 'biến' xe kéo lúa thành xe đón dâu độc đáo",
+    "content": "Tại xã Hùng Tiến, huyện Nam Đàn, Nghệ An, ông Nguyễn Văn Lộc cùng với bà con trong xóm đã cải tạo một chiếc xe kéo lúa thành xe đón dâu độc đáo cho đám cưới của đôi trẻ Nguyễn Văn Mạnh và Nguyễn Thu Hiền. Chiếc xe được trang trí kỳ công với hoa và bóng bay, mang lại kỷ niệm đáng nhớ cho ngày trọng đại. Đám cưới không chỉ tạo nên không khí vui vẻ mà còn thể hiện tình cảm và sự gắn kết của cộng đồng.",
+    "link": "https://vnexpress.net/ca-xom-bien-xe-keo-lua-thanh-xe-don-dau-doc-dao-4865817.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Cộng đồng đã làm gì để tạo nên chiếc xe đón dâu đặc biệt cho đôi trẻ?",
     "answers": [
       {
-        "text": "Khối u ở phổi",
+        "text": "Cải tạo xe kéo lúa thành xe đón dâu",
         "correct": true
       },
       {
-        "text": "Đau tim",
+        "text": "Thiết kế một chiếc xe máy mới",
         "correct": false
       },
       {
-        "text": "Cúm nặng",
+        "text": "Thuê xe đón dâu từ ngoài",
         "correct": false
       },
       {
-        "text": "Gãy xương chân",
+        "text": "Mua một chiếc xe mới hoàn toàn",
         "correct": false
       }
     ]
@@ -4260,28 +4314,28 @@
     ]
   },
   {
-    "title": "Cả xóm 'biến' xe kéo lúa thành xe đón dâu độc đáo",
-    "content": "Tại xã Hùng Tiến, huyện Nam Đàn, Nghệ An, ông Nguyễn Văn Lộc cùng với bà con trong xóm đã cải tạo một chiếc xe kéo lúa thành xe đón dâu độc đáo cho đám cưới của đôi trẻ Nguyễn Văn Mạnh và Nguyễn Thu Hiền. Chiếc xe được trang trí kỳ công với hoa và bóng bay, mang lại kỷ niệm đáng nhớ cho ngày trọng đại. Đám cưới không chỉ tạo nên không khí vui vẻ mà còn thể hiện tình cảm và sự gắn kết của cộng đồng.",
-    "link": "https://vnexpress.net/ca-xom-bien-xe-keo-lua-thanh-xe-don-dau-doc-dao-4865817.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Cộng đồng đã làm gì để tạo nên chiếc xe đón dâu đặc biệt cho đôi trẻ?",
+    "title": "Diễn viên \"Mùi ngò gai\" giải nghệ sang Mỹ: Luôn nhớ quê, phát hiện khối u",
+    "content": "Nghệ sĩ Minh Hoàng, nổi tiếng với vai diễn trong phim \"Mùi ngò gai\", đã chọn định cư tại Mỹ từ năm 2022. Mặc dù đã tuyên bố giải nghệ, ông vẫn thể hiện tình yêu với nghệ thuật bằng cách trở lại tham gia một dự án phim mới. Gần đây, ông gặp phải lo ngại về sức khỏe khi bác sĩ phát hiện một khối u ở phổi, nhưng sau nhiều kiểm tra, may mắn là đó chỉ là u lành tính. Ông chia sẻ rằng cuộc sống ở xứ người mang lại cho ông nhiều kỷ niệm và sự bình yên, mặc dù luôn nhớ quê hương.",
+    "link": "https://dantri.com.vn/giai-tri/dien-vien-mui-ngo-gai-giai-nghe-sang-my-luon-nho-que-phat-hien-khoi-u-20250325150310170.htm",
+    "cat": "giai-tri",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Nghệ sĩ Minh Hoàng đã gặp vấn đề gì về sức khỏe gần đây?",
     "answers": [
       {
-        "text": "Cải tạo xe kéo lúa thành xe đón dâu",
+        "text": "Khối u ở phổi",
         "correct": true
       },
       {
-        "text": "Thiết kế một chiếc xe máy mới",
+        "text": "Đau tim",
         "correct": false
       },
       {
-        "text": "Thuê xe đón dâu từ ngoài",
+        "text": "Cúm nặng",
         "correct": false
       },
       {
-        "text": "Mua một chiếc xe mới hoàn toàn",
+        "text": "Gãy xương chân",
         "correct": false
       }
     ]
