Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Ngân hàng UOB: Chính sách tiền tệ toàn cầu sẽ bị ảnh hưởng từ ông Trump",
+    "content": "Ngân hàng UOB (Singapore) dự đoán rằng Cục Dự trữ Liên bang Mỹ (Fed) sẽ chỉ cắt giảm lãi suất một lần 0,25% trong quý 2 năm 2025, mặc dù thị trường kỳ vọng sẽ có nhiều lần cắt giảm hơn. Ông Abel Lim cho rằng chính sách tiền tệ toàn cầu sẽ bị ảnh hưởng bởi các quyết định của Tổng thống Donald Trump, đặc biệt là những tác động về lạm phát và thương mại. Ông Lê Thành Hưng cũng chỉ ra rằng kinh tế Việt Nam sẽ tiếp tục tăng trưởng nhờ vào đầu tư công, nhưng cũng có những lo ngại về thuế quan từ Mỹ có thể ảnh hưởng đến xuất khẩu của Việt Nam.",
+    "link": "https://tuoitre.vn/ngan-hang-uob-chinh-sach-tien-te-toan-cau-se-bi-anh-huong-tu-ong-trump-20250326212511733.htm",
+    "cat": "kinh-doanh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Chính sách tiền tệ toàn cầu sẽ bị ảnh hưởng bởi điều gì?",
+    "answers": [
+      {
+        "text": "Các chính sách của Tổng thống Donald Trump",
+        "correct": true
+      },
+      {
+        "text": "Tình hình kinh tế châu Âu",
+        "correct": false
+      },
+      {
+        "text": "Giá dầu thế giới",
+        "correct": false
+      },
+      {
+        "text": "Nhu cầu tiêu dùng nội địa",
+        "correct": false
+      },
+      {
+        "text": "Tình hình chính trị tại Việt Nam",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đại gia 'heo ăn chay' công bố thông tin bất thường",
     "content": "Công ty cổ phần Nông nghiệp BaF Việt Nam (mã BAF) đã công bố thông tin phát hành 65 triệu cổ phiếu với giá bán thấp hơn thị trường, nhưng vẫn không bán hết được 11,5 triệu cổ phiếu. Sau đó, công ty đã chào bán số cổ phiếu còn lại cho 15 nhà đầu tư chuyên nghiệp và thu về hơn 1.000 tỉ đồng, dự kiến dùng để mở rộng hoạt động nuôi heo. BAF nổi tiếng với thương hiệu \"heo ăn chay\" và có kế hoạch gia tăng quy mô chăn nuôi để trở thành một trong ba doanh nghiệp hàng đầu trong ngành vào năm 2030.",
     "link": "https://tuoitre.vn/dai-gia-heo-an-chay-cong-bo-thong-tin-bat-thuong-20250326191334796.htm",
@@ -724,33 +755,6 @@
     ]
   },
   {
-    "title": "8 thói quen mỗi ngày giúp đi ngủ sớm",
-    "content": "Bài viết trình bày 8 thói quen giúp mọi người đi ngủ sớm hơn, bao gồm việc duy trì lịch trình ngủ, tránh caffeine và giảm thời gian sử dụng điện thoại trước khi ngủ. Ngủ đủ giấc từ 7-9 giờ mỗi đêm rất quan trọng cho sức khỏe tổng thể, góp phần giảm căng thẳng và cải thiện tâm trạng. Ngoài ra, các mẹo như thư giãn trước khi ngủ, tránh ăn nhiều và không tập thể dục muộn cũng được đề cập để hỗ trợ thói quen ngủ sớm.",
-    "link": "https://vnexpress.net/8-thoi-quen-moi-ngay-giup-di-ngu-som-4866098.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để cải thiện thói quen ngủ sớm hàng ngày?",
-    "answers": [
-      {
-        "text": "Duy trì lịch trình ngủ nhất quán.",
-        "correct": true
-      },
-      {
-        "text": "Uống nhiều cà phê vào buổi tối.",
-        "correct": false
-      },
-      {
-        "text": "Xem tivi trước khi đi ngủ.",
-        "correct": false
-      },
-      {
-        "text": "Không cần thư giãn trước khi ngủ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Melo: 'Với một chân, Neymar vẫn là cầu thủ hay nhất Brazil'",
     "content": "Felipe Melo, cựu tiền vệ Brazil, bày tỏ sự ủng hộ mạnh mẽ đối với Neymar sau thất bại 1-4 của Brazil trước Argentina trong vòng loại World Cup 2026. Melo khẳng định rằng Neymar, dù chỉ có một chân, vẫn là cầu thủ xuất sắc nhất Brazil và cần sớm trở lại đội tuyển. Ông chỉ trích sự thiếu quyết tâm và tinh thần chiến đấu của đội tuyển Brazil, nhấn mạnh rằng họ cần phải đoàn kết và chiến đấu vì nhau.",
     "link": "https://vnexpress.net/melo-voi-mot-chan-neymar-van-la-cau-thu-hay-nhat-brazil-4866176.html",
@@ -773,6 +777,33 @@
       },
       {
         "text": "Brazil không cần thay đổi gì.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "8 thói quen mỗi ngày giúp đi ngủ sớm",
+    "content": "Bài viết trình bày 8 thói quen giúp mọi người đi ngủ sớm hơn, bao gồm việc duy trì lịch trình ngủ, tránh caffeine và giảm thời gian sử dụng điện thoại trước khi ngủ. Ngủ đủ giấc từ 7-9 giờ mỗi đêm rất quan trọng cho sức khỏe tổng thể, góp phần giảm căng thẳng và cải thiện tâm trạng. Ngoài ra, các mẹo như thư giãn trước khi ngủ, tránh ăn nhiều và không tập thể dục muộn cũng được đề cập để hỗ trợ thói quen ngủ sớm.",
+    "link": "https://vnexpress.net/8-thoi-quen-moi-ngay-giup-di-ngu-som-4866098.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Làm thế nào để cải thiện thói quen ngủ sớm hàng ngày?",
+    "answers": [
+      {
+        "text": "Duy trì lịch trình ngủ nhất quán.",
+        "correct": true
+      },
+      {
+        "text": "Uống nhiều cà phê vào buổi tối.",
+        "correct": false
+      },
+      {
+        "text": "Xem tivi trước khi đi ngủ.",
+        "correct": false
+      },
+      {
+        "text": "Không cần thư giãn trước khi ngủ.",
         "correct": false
       }
     ]
@@ -894,6 +925,33 @@
     ]
   },
   {
+    "title": "Điều nên làm khi huyết áp không giảm",
+    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
+    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
+    "answers": [
+      {
+        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
+        "correct": true
+      },
+      {
+        "text": "Bỏ thuốc điều trị hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường uống rượu.",
+        "correct": false
+      },
+      {
+        "text": "Hạn chế uống nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người trẻ bị run tay có nguy hiểm không?",
     "content": "Người trẻ bị run tay thường do căng thẳng hoặc rối loạn hệ thần kinh thực vật. Tình trạng này có thể là phản ứng tự nhiên hoặc triệu chứng của các bệnh lý nghiêm trọng như bệnh Parkinson hoặc cường giáp. Nếu run tay chỉ xảy ra khi căng thẳng thì không quá nguy hiểm, nhưng nếu triệu chứng kéo dài hoặc ảnh hưởng đến sinh hoạt hàng ngày, cần đi khám bác sĩ để xác định nguyên nhân và điều trị kịp thời. Việc duy trì lối sống lành mạnh và cân bằng giữa công việc và nghỉ ngơi cũng rất quan trọng.",
     "link": "https://vnexpress.net/nguoi-tre-bi-run-tay-co-nguy-hiem-khong-4866229.html",
@@ -920,33 +978,6 @@
       },
       {
         "text": "Chỉ ảnh hưởng đến sức khỏe tâm lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Điều nên làm khi huyết áp không giảm",
-    "content": "Khi huyết áp không giảm, người bệnh cần kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn. Họ nên thông báo cho bác sĩ về tất cả loại thuốc và thực phẩm bổ sung đang sử dụng để bác sĩ có thể điều chỉnh liều lượng và loại thuốc phù hợp. Ngoài ra, việc thay đổi lối sống như ăn uống lành mạnh, duy trì cân nặng hợp lý và thư giãn cũng rất quan trọng để kiểm soát huyết áp.",
-    "link": "https://vnexpress.net/dieu-nen-lam-khi-huyet-ap-khong-giam-4866143.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Người bệnh nên làm gì khi huyết áp không giảm?",
-    "answers": [
-      {
-        "text": "Kiểm tra lại đơn thuốc và điều trị nguyên nhân tiềm ẩn.",
-        "correct": true
-      },
-      {
-        "text": "Bỏ thuốc điều trị hoàn toàn.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường uống rượu.",
-        "correct": false
-      },
-      {
-        "text": "Hạn chế uống nước.",
         "correct": false
       }
     ]
